--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Bandalo Kiropraktika Split"
+      content="Miro Bandalo, dr. kiropraktike rođen u Splitu, željan znanja i obrazovanja u okviru istraživanja ljudske anatomije i fiziologije, naoružan iskustvom iz bogatog opusa hobija isključivo vezanih za sport i rekreaciju."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Bandalo Kiropraktika</title>
+    <link rel="icon" type="image/x-icon" src="../src/images/logo.svg">
     <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -35,7 +36,6 @@
 </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
