--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Bandalo Kiropraktika</title>
-    <link rel="icon" type="image/x-icon" src="../src/images/logo.svg">
+    <link rel="icon" type="image/x-icon" src="images/logo.svg">
     <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
