--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Bandalo Kiropraktika</title>
-    <link rel="icon" type="image/x-icon" src="images/logo.svg">
+    <link rel="icon" href="images/logo.svg" sizes="any">
+    <link rel="icon" href="images/logo.svg" type="image/svg+xml">
     <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
