new price layout

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Bandalo Kiropraktika Split"
-      content="Miro Bandalo, dr. kiropraktike rođen u Splitu, željan znanja i obrazovanja u okviru istraživanja ljudske anatomije i fiziologije, naoružan iskustvom iz bogatog opusa hobija isključivo vezanih za sport i rekreaciju."
-    />
+    <meta name="title" content="Bandalo Kiropraktika Split"/>
+    <meta name="description" content="Miro Bandalo, dr. kiropraktike rođen u Splitu, željan znanja i obrazovanja u okviru istraživanja ljudske anatomije i fiziologije, naoružan iskustvom iz bogatog opusa hobija isključivo vezanih za sport i rekreaciju, svoje kormilo usmjerava ka kiropraktici i to na jednom od najboljih fakulteta u Sjedinjenim Američkim Državama – Life University, gdje u konačnici i završava svoje obrazovanje i postaje DOKTOR KIROPRAKTIKE">
+  <meta name="keywords" content="Kiropraktika, Split, Chriropractor, Health, Croatia, Bandalo">
+  <meta name="author" content="Miro Bandalo">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
